header color fix

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -76,7 +76,7 @@
       a {
         font-size: 1.375rem;
         line-height: 1.36;
-        color: $greyish-brown;
+        color: $black-fourteen !important;
         position: relative;
         @include tablet {
           margin: 0 1rem;
