--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -47,13 +47,9 @@ hr {
   font-family: $nunito-bold;
   border-radius: .15rem;
   background-color: $bright-red;
-  text-transform: uppercase;
   border: none;
   @include fontSize(16);
   @include letterSpacing(.4);
-  &.carBtn {
-    text-transform: none;
-  }
 }
 
 a.button {
@@ -186,9 +182,6 @@ a.button {
 .multiContainer {
   @include padding(0, 40);
   @include margin(70,0,0,0);
-  button {
-    border: 1px solid black;
-  }
 }
 
 .multiItem {
@@ -196,23 +189,18 @@ a.button {
   text-align: center;
 
   .roundImg {
-    @include width(220);
-    @include height(220);
+    @include width(223);
+    @include height(223);
     border-radius: 50%;
-    background-color: $bright-red;
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
 
     img {
-      @include width(96);
-      @include height(100);
-    }
-
-    &:hover {
-      background-color: inherit;
-      border: 1px solid $bright-red;
+      cursor: pointer;
+      @include width(223);
+      @include height(223);
     }
   }
 
@@ -240,9 +228,42 @@ a.button {
   background-image: url('/images/login-bg.jpg');
   background-size: cover;
   border-radius:5px; 
+  position: relative;
 
   &:first-child {
     @include margin(0,0,40,0);
+  }
+  
+  &::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 35%;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-bottom-left-radius: 5px; 
+    border-bottom-right-radius: 5px; 
+  }
+
+  h4 {
+    position: absolute;
+    bottom: 18%;
+    width: 100%;
+    text-align: center;
+    color: #ffffff;
+
+    font-family: $nunito-bold;
+    @include fontSize(20);
+    @include letterSpacing(0.6);
+  }
+
+  p {
+    color: $white;
+    position: absolute;
+    top: 80%;
+    width: 100%;
+    text-align: center;
   }
 }
 
@@ -256,7 +277,7 @@ a.button {
   display: flex !important;
   justify-content: space-between;
   flex-direction: row;
-  padding-top:20px; 
+  padding: 10px 0; 
   border-radius: 5px; 
 
   .imageContainer {
