--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -223,5 +223,10 @@
 // multicarousel
 
 .slick-next, .slick-prev {
-  border: 2px solid red !important;
+  width: 50px;
+  height: 50px;
+
+  &:before {
+    content: '' !important;
+  }
 }
