--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import '../variables/utils';
 @import '../variables/colors';
 @import '../variables/breakpoints';
+@import "node_modules/react-image-gallery/styles/scss/image-gallery.scss";
 
 .jumbotron {
   border-radius: 0;
