--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -29,7 +29,7 @@
 //Jumbotron 
 
 h1 {
-  font-family: $playfair-regular;
+  font-family: $nunito-regular;
   @include fontSize(58);
   @include letterSpacing(1.2);
   line-height: 1;
@@ -125,7 +125,7 @@ a.button {
 .packageContainer {
   display: flex;
   justify-content: space-around;
-  padding: 5rem 0;
+  padding: 3.5rem 0;
   border-bottom: 2px solid #eee;
 
   .details {
@@ -134,8 +134,8 @@ a.button {
   }
 
   .featureImage {
-    @include width(407);
-    @include height(407);
+    @include width(350);
+    @include height(350);
     border-radius: 50%;
     background-size: cover;
     position: relative;
@@ -205,7 +205,7 @@ a.button {
   }
 
   h3 {
-    font-family: $playfair-regular;
+    font-family: $nunito-regular;
     @include fontSize(30);
     @include letterSpacing(1.2);
     line-height: 1.3;
@@ -225,10 +225,10 @@ a.button {
 .staticItem {
   width: 95%;
   @include height(360);
-  background-image: url('/images/login-bg.jpg');
   background-size: cover;
   border-radius:5px; 
   position: relative;
+  cursor: pointer;
 
   &:first-child {
     @include margin(0,0,40,0);
@@ -294,7 +294,7 @@ a.button {
   .detailContainer {
     width: 55%;
     background-color: $bright-red;
-    color: $white;
+    color: $white !important;
     @include padding(15,20,0,25);
     position: relative;
     border-top-right-radius: 5px; 
@@ -337,7 +337,7 @@ a.button {
 
   .detailContainer {
     background-color: rgba(0, 0, 0, 0.16);
-    color: $black ;
+    color: $black !important;
     border-top-right-radius: 0; 
     border-bottom-right-radius: 0; 
     border-top-left-radius: 5px; 
