--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -91,34 +91,6 @@ a.button {
     background-image: linear-gradient(to right, rgba(56, 26, 28, 0.53), rgba(58, 27, 29, 0.78) 31%, rgba(95, 43, 48, 0) 65%, rgba(0, 0, 0, 0));
   }
 }
-.carouselContent {
-  position: absolute;
-  text-align: center;
-  bottom: 5rem;
-  left: 0;
-  right: 0;
-  color: white;
-
-  h3 {
-    font-family: $playfair-regular;
-    @include fontSize(26);
-    letter-spacing: .8px;
-    text-align: center;
-    @include width(640);
-    margin: 0 auto 2rem;
-  }
-
-  .buttonContainer {
-    display: contents;
-    position: absolute;
-    text-align: center;
-
-    .button {
-      @include fontSize(22);
-      @include letterSpacing(.7);
-    }
-  }
-}
 
 // Package styles
 
@@ -130,7 +102,7 @@ a.button {
 
   .details {
     width: max-content;
-    padding-top: 2.5rem; 
+    padding-top: 2.5rem;
   }
 
   .featureImage {
@@ -227,13 +199,13 @@ a.button {
   @include height(360);
   background-image: url('/images/login-bg.jpg');
   background-size: cover;
-  border-radius:5px; 
+  border-radius: 5px;
   position: relative;
 
   &:first-child {
     @include margin(0,0,40,0);
   }
-  
+
   &::before {
     content: '';
     position: absolute;
@@ -242,8 +214,8 @@ a.button {
     width: 100%;
     height: 35%;
     background-color: rgba(0, 0, 0, 0.7);
-    border-bottom-left-radius: 5px; 
-    border-bottom-right-radius: 5px; 
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
   }
 
   h4 {
@@ -267,27 +239,26 @@ a.button {
   }
 }
 
-.verticalMultiContainer {
-  
-}
+.verticalMultiContainer {}
 
 .verticalMultiItem {
   width: 100%;
-  @include height(260);  
+  @include height(260);
   display: flex !important;
   justify-content: space-between;
   flex-direction: row;
-  padding: 10px 0; 
-  border-radius: 5px; 
+  padding: 10px 0;
+  border-radius: 5px;
 
   .imageContainer {
     width: 45%;
-    border-radius: 5px; 
+    border-radius: 5px;
+
     img {
       width: 100%;
       height: 100%;
-      border-top-left-radius: 5px; 
-      border-bottom-left-radius: 5px; 
+      border-top-left-radius: 5px;
+      border-bottom-left-radius: 5px;
     }
   }
 
@@ -297,8 +268,8 @@ a.button {
     color: $white;
     @include padding(15,20,0,25);
     position: relative;
-    border-top-right-radius: 5px; 
-    border-bottom-right-radius: 5px; 
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 
     p {
       @include fontSize(18);
@@ -328,20 +299,20 @@ a.button {
 
   .imageContainer {
     img {
-      border-top-right-radius: 5px; 
-      border-bottom-right-radius: 5px; 
-      border-top-left-radius: 0; 
-      border-bottom-left-radius: 0; 
+      border-top-right-radius: 5px;
+      border-bottom-right-radius: 5px;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
     }
   }
 
   .detailContainer {
     background-color: rgba(0, 0, 0, 0.16);
-    color: $black ;
-    border-top-right-radius: 0; 
-    border-bottom-right-radius: 0; 
-    border-top-left-radius: 5px; 
-    border-bottom-left-radius: 5px; 
+    color: $black;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 
     .handle {
       background-color: #dcd5d5;
@@ -350,4 +321,55 @@ a.button {
       top: 35%;
     }
   }
+}
+
+.carousel-header {
+  @include fontSize(58);
+  line-height: 1.24;
+  color: white;
+
+}
+
+.carousel-text {
+  line-height: 1.21;
+  @include fontSize(28);
+  margin-bottom: 1.5rem;
+}
+
+.carousel-btn {
+  font-family: $nunito-bold;
+  @include fontSize(20);
+  @include letterSpacing(.7);
+  background: $bright-red;
+  @include padding(17,30);
+  @include borderRadius(10);
+  color: $white;
+
+  &:hover {
+    color: $white;
+    text-decoration: none;
+  }
+}
+
+.carouselContent {
+  position: absolute;
+  text-align: center;
+  @include top(104.7);
+  @include left(126);
+  color: white;
+  text-align: left;
+  padding-right: 50%;
+
+  .buttonContainer {
+    display: flex;
+    flex-grow: 1;
+  }
+}
+
+.bottom-curve {
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  max-width: 100%;
+  height: auto;
 }
