--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -39,5 +39,8 @@ body {
 }
 
 h1,h2,h3,h4,h5,h6 {
-  font-family: $playfair-regular;
+  font-family: $nunito-regular;
+}
+.app {
+  margin-top: 10.33125rem;
 }
