--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -36,7 +36,7 @@ p {
   margin-bottom: 2rem;
 
   p:first-child {
-    font-family: $playfair-bold;
+    font-family: $nunito-bold;
     @include fontSize(18);
     margin-bottom: 1rem;
 
