--- a/src/modules/ceremonyDetail/CeremonyDetail.scss
+++ b/src/modules/ceremonyDetail/CeremonyDetail.scss
@@ -54,7 +54,7 @@
 }
 
 h3 {
-  font-family: $playfair-regular;
+  font-family: $nunito-regular;
   color: $black;
   @include fontSize(30);
   @include margin(0,0,20);
