--- a/src/variables/_colors.scss
+++ b/src/variables/_colors.scss
@@ -32,3 +32,5 @@ $black-twelve:#070707;
 $warm-grey-six: #807c7c;
 $black-fourteen: #101010;
 $red-two: #f00303;
+$black-fifteen: #212020;
+$brownish-grey-three: #5c5c5c;
