--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -329,6 +329,9 @@ a.button {
       right: -4.5%;
       top: 35%;
     }
+    h3 {
+      color: $black !important;
+    }
   }
 }
 .carousel-header {
