--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -248,3 +248,24 @@
   background-size: contain;
   cursor: pointer;
 }
+// 
+.image-gallery-image {
+  width: 75vw;
+  height: 25vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.image-gallery-thumbnail {
+  &.active {
+    border: 4px solid $white;
+    @include borderRadius(10);
+  }
+}
+.image-gallery-thumbnail {
+  @include width(137);
+  @include height(137);
+  img {
+    max-width: 100%;
+  }
+}
