--- a/src/components/Loader/loader.scss
+++ b/src/components/Loader/loader.scss
@@ -6,30 +6,65 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 .outerImage {
   position: relative;
 }
 
-// .innerImage {
-//   position: absolute;
-//   top: calc(50% - 18px);
-//   left: calc(50% - 15.5px);
-//   animation-name: rotateImage;
-//   animation-duration: 2s;
-//   animation-iteration-count: infinite;
-// }
-@keyframes rotateImage {
-  0% {
-    transform: rotateY(0deg);
+.loader {
+  width: 50px;
+  height: 100px;
+  border-radius: 100%;
+  position: relative;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  span {
+    display: inline-block;
+    width: 5px;
+    height: 20px;
+    background-color: $bright-red;
+
+    &:nth-child(1) {
+      animation: grow 1s ease-in-out infinite;
+    }
+
+    &:nth-child(2) {
+      animation: grow 1s ease-in-out .15s infinite;
+    }
+
+    &:nth-child(3) {
+      animation: grow 1s ease-in-out .30s infinite;
+    }
+
+    &:nth-child(4) {
+      animation: grow 1s ease-in-out .45s infinite;
+    }
+
+  }
+}
+@keyframes grow {
+  0%,
+  100% {
+    -webkit-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    -o-transform: scaleY(1);
+    transform: scaleY(1);
   }
 
   50% {
-    transform: rotateY(180deg);
+    -webkit-transform: scaleY(1.8);
+    -ms-transform: scaleY(1.8);
+    -o-transform: scaleY(1.8);
+    transform: scaleY(1.8);
   }
+}
 
-  100% {
-    transform: rotateY(360deg);
-  }
+.loader-text {
+  @include fontSize(25);
 }
