--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -46,4 +46,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 .main {
   min-height: calc(100vh - 40.1rem);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
